--- a/test01.html
+++ b/test01.html
@@ -6,5 +6,6 @@
   <body>
     <h1>Group 06</h1>  <!-- Change this into your team name -->
     <p>My name is Minh.</p>  <!-- Change this into your name -->
+    <p>Change something</p>
   </body>
 </html>
